chore(deps): restore fixed local copy of num-bigint-dig and patch to local path

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -140,9 +140,9 @@ rcgen = "0.9"
 proptest = "1.0"
 
 [patch.crates-io]
-# Temporary override: point to upstream commit that fixes `div_ceil` usage
-# (replaces method-style `x.div_ceil(&y)` with `Integer::div_ceil(&x, &y)`).
-# This targets the upstream rust-num/num-bigint commit which contains the
-# div_ceil/int-roundings fixes. Remove this override once a fixed crates.io
-# release is published.
-num-bigint-dig = { git = "https://github.com/rust-num/num-bigint.git", package = "num-bigint", rev = "1469ed68d16bcaa069965dcecf4cab0dbcde3b92" }
+# Local vendored override: use the in-tree fixed copy of num-bigint to avoid
+# future-incompatibility warnings until an upstream fixed release is available.
+# Keep the copy in `vendor/num-bigint-dig` and point the patch to that path.
+# Remove this override and vendor copy once the upstream crates.io release
+# addresses the future-incompatibility warnings.
+num-bigint-dig = { path = "vendor/num-bigint-dig", package = "num-bigint" }
