--- a/.github/workflows/ffi-smoke-test.yml
+++ b/.github/workflows/ffi-smoke-test.yml
@@ -29,30 +29,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-cargo-
 
-      - name: Install build tools and rustup (Linux/macOS)
-        if: runner.os != 'Windows'
-        run: |
-          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
-          export PATH="$HOME/.cargo/bin:$PATH"
-          rustup toolchain install stable
-          rustup toolchain install nightly
-          rustup default stable
-          if [ "${{ matrix.os }}" = "ubuntu-latest" ]; then
-            sudo apt-get update
-            sudo apt-get install -y build-essential clang
-          fi
-
-      - name: Install build tools and rustup (Windows)
-        if: runner.os == 'Windows'
-        shell: pwsh
-        run: |
-          Invoke-WebRequest -Uri https://win.rustup.rs -OutFile rustup-init.exe
-          ./rustup-init.exe -y
-          $env:PATH = "$env:USERPROFILE\\.cargo\\bin;" + $env:PATH
-          rustup toolchain install stable
-          rustup toolchain install nightly
-          rustup default stable
-          choco install -y mingw
+      - name: Setup rust toolchains and platform build tools
+        uses: ./.github/actions/setup-rust
+        with:
+          install-mingw: "true"
 
       - name: Run future-incompat check (nightly)
         run: |
