--- a/.github/workflows/capnp_smoke.yml
+++ b/.github/workflows/capnp_smoke.yml
@@ -1,4 +1,6 @@
 name: Cap'n Proto single-step smoke
+permissions:
+  contents: read
 
 on:
   push:
@@ -10,13 +12,13 @@ jobs:
   capnp-smoke:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@ff7abcd0c3c05ccf6adc123a8cd1fd4fb30fb493
       - name: Install capnp
         run: |
           sudo apt-get update -y
           sudo apt-get install -y capnproto
       - name: Install Rust
-        uses: actions-rs/toolchain@v1
+        uses: actions-rs/toolchain@88dc2356392166efad76775c878094f4e83ff746
         with:
           toolchain: stable
           profile: minimal
