--- a/.github/workflows/capnp_codegen.yml
+++ b/.github/workflows/capnp_codegen.yml
@@ -27,6 +27,11 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y capnproto
 
+      - name: Install capnpc plugin
+        run: |
+          export PATH="$HOME/.cargo/bin:$PATH"
+          cargo install capnpc --locked || true
+
       - name: Build (capnproto feature)
         run: |
           cargo build -p commy --features capnproto --verbose
