--- a/.github/workflows/capnp-ci.yml
+++ b/.github/workflows/capnp-ci.yml
@@ -36,20 +36,23 @@ jobs:
         if: runner.os == 'macOS'
         run: |
           brew update
-          brew install capnproto
+          # Homebrew formula is 'capnp' (not capnproto)
+          brew install capnp
 
       - name: Install Cap'n Proto (Windows)
         if: runner.os == 'Windows'
         shell: pwsh
         run: |
-          choco install -y capnproto || Write-Host "choco install failed; ensure capnp available on PATH"
+          # Chocolatey package is 'capnproto'
+          choco install -y capnproto
 
       - name: Install capnpc plugin (Linux/macOS)
         if: runner.os != 'Windows'
         shell: bash
         run: |
           export PATH="$HOME/.cargo/bin:$PATH"
-          cargo install capnpc --locked
+          # Try a single install; if it fails, print PATH and exit so CI surfaces the error
+          cargo install capnpc --locked || (echo "cargo install capnpc failed" && echo "PATH=$PATH" && exit 1)
           echo "PATH=$HOME/.cargo/bin:$PATH" >> $GITHUB_ENV
 
       - name: Install capnpc plugin (Windows)
@@ -64,8 +67,8 @@ jobs:
         shell: bash
         run: |
           echo "PATH=$PATH"
-          capnp --version
-          capnpc --version
+          capnp --version || (echo 'capnp not found' && exit 1)
+          capnpc --version || (echo 'capnpc not found' && exit 1)
           echo "capnpc:" $(command -v capnpc || echo "not found")
         if: runner.os != 'Windows'
 
