--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
+  RUST_BACKTRACE: full
 
 jobs:
   test-rust:
@@ -40,13 +41,14 @@ jobs:
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Build
-        run: cargo build --workspace --verbose
+        run: cargo build --workspace --features "all_formats" --verbose
 
       - name: Run tests
-        run: cargo test --workspace --verbose
+        run: cargo test --workspace --features "all_formats" --verbose
 
       - name: Upload capnpc diagnostics (if present)
-        uses: actions/upload-artifact@v3
+        if: always()
+        uses: actions/upload-artifact@v4
         with:
           name: capnpc-diagnostics-${{ matrix.os }}
           path: |
