ci: set TEST_ENV=1 in CI workflows to opt-in tests to MockAuthProvider

--- a/.github/workflows/capnp_codegen.yml
+++ b/.github/workflows/capnp_codegen.yml
@@ -16,6 +16,7 @@ jobs:
       # Request full backtraces from any Rust process so panics include verbose
       # frames for diagnosis (helps triaging capnpc panics in CI).
       RUST_BACKTRACE: full
+      TEST_ENV: '1'
     steps:
       - name: Checkout
         uses: actions/checkout@ff7abcd0c3c05ccf6adc123a8cd1fd4fb30fb493
